none: fix GPU keplerian elements code, make nu sampling behave.